--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -14,7 +14,7 @@
         android:layout_height="52dp"
         android:layout_marginTop="40dp"
         android:fontFamily="@font/inter_extra_bold"
-        android:text="@string/login"
+        android:text="Register"
         android:textAlignment="center"
         android:textColor="@color/white"
         android:textSize="36sp"
@@ -26,7 +26,7 @@
         android:id="@+id/editTextTextPersonName"
         android:layout_width="274dp"
         android:layout_height="44dp"
-        android:layout_marginTop="60dp"
+        android:layout_marginTop="40dp"
         android:background="@drawable/input"
         android:drawableStart="@drawable/person"
         android:drawablePadding="12dp"
@@ -62,6 +62,25 @@
         app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />
 
 
+    <EditText
+        android:id="@+id/editTextTextPersonName3"
+        android:layout_width="274dp"
+        android:layout_height="44dp"
+        android:layout_marginTop="45dp"
+        android:background="@drawable/input"
+        android:drawableStart="@drawable/lock"
+        android:drawablePadding="12dp"
+        android:ems="10"
+        android:hint="Confirm Password"
+        android:inputType="textPersonName"
+        android:paddingStart="20dp"
+        android:paddingEnd="20dp"
+        android:textSize="12dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.496"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2" />
+
     <com.google.android.material.button.MaterialButton
         android:id="@+id/button"
         android:layout_width="274dp"
@@ -72,42 +91,29 @@
         android:fontFamily="@font/inter_extra_bold_italic"
         android:paddingTop="10dp"
         android:paddingBottom="10dp"
-        android:text="LOGIN"
+        android:text="Register"
         android:textSize="18dp"
         app:backgroundTint="#4F89B4"
         app:cornerRadius="40dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2" />
-
-    <TextView
-        android:id="@+id/forgetpw"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
-        android:fontFamily="@font/inter_italic"
-        android:text="@string/forgot_your_password"
-        android:textColor="@color/white"
-        android:textSize="14dp"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button" />
+        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName3" />
 
     <TextView
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="80dp"
+        android:layout_marginTop="60dp"
         android:alpha="0.5"
         android:fontFamily="@font/inter_italic"
-        android:text="--------------------or login with-------------------- "
+        android:text="------------------or register with------------------ "
         android:textColor="@color/black"
         android:textSize="14dp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.493"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/forgetpw" />
+        app:layout_constraintTop_toBottomOf="@+id/button" />
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/button2"
@@ -154,29 +160,29 @@
         android:layout_height="wrap_content"
         android:alpha="0.5"
         android:fontFamily="@font/inter_regular"
-        android:text="@string/dont_have_an_account"
+        android:text="Already have an account ?"
         android:textColor="@color/black"
         android:textSize="12dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.397"
+        app:layout_constraintHorizontal_bias="0.399"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView2"
-        app:layout_constraintVertical_bias="0.778" />
+        app:layout_constraintVertical_bias="0.779" />
 
     <TextView
         android:id="@+id/textView4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/inter_bold"
-        android:text="@string/sign_up"
+        android:text="Sign In !"
         android:textColor="#80bdff"
         android:textSize="12dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.08"
+        app:layout_constraintHorizontal_bias="0.064"
         app:layout_constraintStart_toEndOf="@+id/textView3"
         app:layout_constraintTop_toBottomOf="@+id/textView2"
-        app:layout_constraintVertical_bias="0.776" />
+        app:layout_constraintVertical_bias="0.777" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
