--- a/app/src/main/res/layout/activity_login_page.xml
+++ b/app/src/main/res/layout/activity_login_page.xml
@@ -52,7 +52,7 @@
         android:drawablePadding="12dp"
         android:ems="10"
         android:hint="Password"
-        android:inputType="textPersonName"
+        android:inputType="textPassword"
         android:paddingStart="20dp"
         android:paddingEnd="20dp"
         android:textSize="12dp"
@@ -113,9 +113,10 @@
         android:id="@+id/button2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="52dp"
+        android:layout_marginStart="32dp"
         android:layout_marginTop="20dp"
         android:backgroundTint="#37a7ef"
+        android:drawableLeft="@drawable/facebook_icon"
         android:fontFamily="@font/inter_bold"
         android:paddingStart="20dp"
         android:paddingTop="10dp"
@@ -129,12 +130,13 @@
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/button3"
-        android:layout_width="113dp"
-        android:layout_height="48dp"
+        android:layout_width="157dp"
+        android:layout_height="55dp"
         android:layout_marginStart="100dp"
         android:layout_marginTop="20dp"
         android:layout_marginEnd="52dp"
         android:backgroundTint="#5273b6"
+        android:drawableLeft="@drawable/twitter_icon"
         android:fontFamily="@font/inter_bold"
         android:paddingStart="20dp"
         android:paddingTop="10dp"
@@ -144,7 +146,7 @@
         android:textSize="12dp"
         app:cornerRadius="20dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.59"
+        app:layout_constraintHorizontal_bias="0.756"
         app:layout_constraintStart_toEndOf="@+id/button2"
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
@@ -178,5 +180,6 @@
         app:layout_constraintStart_toEndOf="@+id/textView3"
         app:layout_constraintTop_toBottomOf="@+id/textView2"
         app:layout_constraintVertical_bias="0.776" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
