--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -52,7 +52,7 @@
         android:drawablePadding="12dp"
         android:ems="10"
         android:hint="Password"
-        android:inputType="textPersonName"
+        android:inputType="textPassword"
         android:paddingStart="20dp"
         android:paddingEnd="20dp"
         android:textSize="12dp"
@@ -72,7 +72,7 @@
         android:drawablePadding="12dp"
         android:ems="10"
         android:hint="Confirm Password"
-        android:inputType="textPersonName"
+        android:inputType="textPassword"
         android:paddingStart="20dp"
         android:paddingEnd="20dp"
         android:textSize="12dp"
@@ -119,9 +119,10 @@
         android:id="@+id/button2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="52dp"
+        android:layout_marginStart="32dp"
         android:layout_marginTop="20dp"
         android:backgroundTint="#37a7ef"
+        android:drawableLeft="@drawable/facebook_icon"
         android:fontFamily="@font/inter_bold"
         android:paddingStart="20dp"
         android:paddingTop="10dp"
@@ -135,12 +136,13 @@
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/button3"
-        android:layout_width="113dp"
-        android:layout_height="48dp"
+        android:layout_width="157dp"
+        android:layout_height="55dp"
         android:layout_marginStart="100dp"
         android:layout_marginTop="20dp"
         android:layout_marginEnd="52dp"
         android:backgroundTint="#5273b6"
+        android:drawableLeft="@drawable/twitter_icon"
         android:fontFamily="@font/inter_bold"
         android:paddingStart="20dp"
         android:paddingTop="10dp"
@@ -150,7 +152,7 @@
         android:textSize="12dp"
         app:cornerRadius="20dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.59"
+        app:layout_constraintHorizontal_bias="0.756"
         app:layout_constraintStart_toEndOf="@+id/button2"
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
