--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -1,10 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:tools="http://schemas.android.com/tools">
+
+    <data>
+        <variable
+            name="viewModel"
+            type="com.example.contacttracingproject.viewModel.ProfileViewModel" />
+    </data>
+
+<FrameLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Profile" >
+
 
     <ScrollView
         android:layout_width="match_parent"
@@ -79,32 +89,87 @@
 
                         </LinearLayout>
 
-                        <TextView
+                        <LinearLayout
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_marginTop="15dp"
-                            android:text="@string/name_user123123"
-                            android:textColor="#8cc3ea"
-                            android:textSize="13sp"
-                            android:fontFamily="@font/inter_bold"/>
+                            android:orientation="horizontal">
 
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginTop="7dp"
-                            android:text="@string/phone_0123456789"
-                            android:textColor="#8cc3ea"
-                            android:textSize="13sp"
-                            android:fontFamily="@font/inter_bold"/>
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginTop="15dp"
+                                android:text="Name:"
+                                android:textColor="#8cc3ea"
+                                android:textSize="13sp"
+                                android:fontFamily="@font/inter_bold"
+                                />
 
-                        <TextView
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginTop="15dp"
+                                android:layout_marginStart="5dp"
+                                android:text="@={viewModel.username}"
+                                android:textColor="#8cc3ea"
+                                android:textSize="13sp"
+                                android:fontFamily="@font/inter_bold"
+                                />
+                        </LinearLayout>
+
+                        <LinearLayout
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_marginTop="7dp"
-                            android:text="@string/nric_03010203010203"
-                            android:textColor="#8cc3ea"
-                            android:textSize="13sp"
-                            android:fontFamily="@font/inter_bold"/>
+                            android:orientation="horizontal">
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginTop="7dp"
+                                android:text="Phone:"
+                                android:textColor="#8cc3ea"
+                                android:textSize="13sp"
+                                android:fontFamily="@font/inter_bold"
+                            />
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginTop="7dp"
+                                android:layout_marginStart="5dp"
+                                android:text="@={viewModel.phone}"
+                                android:textColor="#8cc3ea"
+                                android:textSize="13sp"
+                                android:fontFamily="@font/inter_bold"
+                            />
+
+                        </LinearLayout>
+
+                        <LinearLayout
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:orientation="horizontal">
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginTop="7dp"
+                                android:text="NRIC:"
+                                android:textColor="#8cc3ea"
+                                android:textSize="13sp"
+                                android:fontFamily="@font/inter_bold"
+                            />
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginTop="7dp"
+                                android:layout_marginStart="5dp"
+                                android:text="@={viewModel.icNumber}"
+                                android:textColor="#8cc3ea"
+                                android:textSize="13sp"
+                                android:fontFamily="@font/inter_bold"
+                            />
+                        </LinearLayout>
 
 
 
@@ -238,3 +303,4 @@
     </ScrollView>
 
 </FrameLayout>
+</layout>
